# newmacemu

./: .gitignore  CMakeLists.txt  DartConfiguration.tcl  Makefile
docs/: reference.md
include/: 68040.hpp  68040fpu.hpp  bus.hpp  exception.hpp  inline.hpp  io.hpp  jit.hpp  memory.hpp  mmu.hpp  proto.hpp  test.hpp  util.hpp  via.hpp
include/chip/: 53c94.hpp  asc.hpp  iifx.hpp  iop.hpp  rbv.hpp  scc.hpp  scsi.hpp  sonic.hpp  swim.hpp  vdac.hpp  via.hpp
include/ebus/: adb.hpp  serial.hpp
include/mb/: glue.hpp  jaws.hpp  mcu.hpp  mdu.hpp  oss.hpp  v8.hpp
src/: 68040.cc  bus.cc  common.cc  io.cc  main.cc  memory.cc  video.cc
src/chip/: asc.cc  iop.cc  mcu.cc  oss.cc  rtc.cc  scc.cc  via.cc  via.cpp
src/cpu/: 68040_fpu.cc  68040_mmu.cc  arithmetic.cc  bcd.cc  bitfield.cc  bits.cc  branch.cc  disasm.cc  exception.cc  m68k_ea.cc  movem.cc  op.cc  op_move.cc  op_movem.cc  opcodes.cc  run.cc
src/cpu/jit/: jit.cc  jit_common.hpp  jit_ea.cc  jit_fpu.cc  jit_mmu.cc  jit_op.cc  jit_proto.hpp  jit_util.cc
src/debugger/: debugger.cc  disasm.cc  lua.cc  luafp.cc
src/ebus/: adb.cc  serial.cc
src/librom/: boot.cc  common.cc  init.cc  init_ex.cc  libasc1.cc  libeasc1.cc  libserialDebug.cc  libvia.cc  ram.cc  rom_common.hpp  rom_proto.hpp
src/librom/data/: addrMap.cc  universalInfo.cc
src/rom/: macrom.cc
test/: abcd.cc  adda.cc  addi.cc  andi.cc  arithmetric.cc  bclr.cc  bfexts.cc  bfffo.cc  bftst.cc  bitfields.cc  bits.cc  cas.cc  chk.cc  fpu.cc  lua.cc  nz.cc  ori.cc  store.cc  test.hpp  test_main.cc
test/chip/: test_adb.cc  test_asc.cc  test_scc.cc  test_via.cc
test/cpu/: abcd.cc  add.cc  adda.cc  addi.cc  addq.cc  addx.cc  and.cc  andi.cc  asl.cc  asr.cc  bcc.cc  bchg.cc  bclr.cc  bfchg.cc  bfclr.cc  bfexts.cc  bfextu.cc  bfffo.cc  bfins.cc  bfset.cc  bftst.cc  bkpt.cc  bra.cc  bset.cc  bsr.cc  btst.cc  cas.cc  cas2.cc  chk.cc  chk2.cc  cinv.cc  clr.cc  cmp.cc  cmp2.cc  cmpa.cc  cmpi.cc  cmpm.cc  cpush.cc  dbcc.cc  divs.cc  (+58 more)
test/cpu/jit/: ea.cc
test/debugger/: disasm0.cc  disasm1_3.cc  disasm4.cc  disasm5_7.cc  disasm8_D.cc  disasmE.cc  disasmF.cc  disasm_ea.cc
test/fpu/: common.cc  fabs.cc  facos.cc  fadd.cc  fasin.cc  fatan.cc  fatanh.cc  fbcc.cc  fcmp.cc  fcos.cc  fcosh.cc  fdbcc.cc  fdiv.cc  fetox.cc  fetoxm1.cc  fgetexp.cc  fgetman.cc  fint.cc  fintrz.cc  flog10.cc  flog2.cc  flogn.cc  flognp1.cc  fmod.cc  fmove.cc  fmovecr.cc  fmovem.cc  fmul.cc  fneg.cc  fnop.cc  fpexcept.cc  frem.cc  frestore.cc  fsave.cc  fscale.cc  fscc.cc  fsgldiv.cc  fsglmul.cc  fsin.cc  fsincos.cc  (+9 more)
test/lua/: asm.lua  lib.lua
test/lua/cpu/: abcd.lua  addi.lua  andi.lua  bchg.lua  bclr.lua  bset.lua  btst.lua  cas.lua  cas2.lua  chk.lua  chk2.lua  clr.lua  cmp2.lua  cmpi.lua  eori.lua  exg.lua  ext.lua  lea.lua  link.lua  move.lua  move16.lua  movea.lua  movem.lua  movep.lua  nbcd.lua  neg.lua  negx.lua  not.lua  or.lua  ori.lua  pack.lua  pea.lua  sbcd.lua  subi.lua  swap.lua  tas.lua  tst.lua  unlk.lua  unpk.lua
test/mmu/: atc.cc  disabled.cc  dttr.cc  ittr.cc  pflush.cc  psearch.cc  ptest.cc
test/rom/: adb1.cc  asc1.cc  asc2.cc  boot.cc  common.cc  init1.cc  init2.cc  xpram.cc
tool/: asm.pl
